--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -90,7 +90,7 @@
     font-size: 2.5rem;
 }
 
-.button{
+.button-transaction{
     position: absolute;
     bottom: 5%;
     right: 1%;
@@ -106,8 +106,33 @@
     cursor: pointer;
 }
 
-.button p{
+.button-transaction p{
     font-size: 4rem;
+    padding: 0;
+    margin-top: -10px;
+    color: whitesmoke;
+    font-weight: bolder;
+
+}
+
+.button-recurring{
+    position: absolute;
+    bottom: 13%;
+    right: 1%;
+    width: 70px;
+    height: 70px;
+    background-color: gray;
+    border-radius: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    cursor: pointer;
+}
+
+.button-recurring p{
+    font-size: 3rem;
     padding: 0;
     margin-top: -10px;
     color: whitesmoke;
