--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -2,45 +2,88 @@
     margin: 0;
     font-size: 16px;
 }
-
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Source Sans Pro', serif;
+}
 .main{
     display: grid;
-    height: 82vh;
-    padding: 2rem 8rem;
-    grid-template: 1fr 1fr / 1fr 1fr 1fr 1fr;
-    gap: 3.5rem;
+    height: auto;
+    width: 1300px;
+    gap: 3rem;
 }
 
 .balance-widget,
 .transactions,
-.stats{
+.recurringTransactions{
     border: 1px solid;
-    border-radius: 15px;
+    border-radius: 2rem;
     padding: 1.5rem;
-    background-color: rgb(221, 221, 221);
+    background-color: rgba(255, 255, 255, 0.274);
 }
 
 /* balance widget*/
 .balance-widget{
-    grid-column: span 2;
+    grid-column: span 1;
     grid-row: span 1;
+    height: 560px;
+    display: grid;
+    padding: 0;
+    grid-template-rows: 1fr 1fr 1fr;
+    align-items: center;
 }
-
-.balance-widget h2{
+.balance {
+    grid-row: 1;
+}
+.balance h2{
     font-size: 2.5rem;
-}
-
-.balance{
-    padding: 2rem;
+    padding-left: 2rem;
+    margin-top: 2rem;
 }
 .balance p {
     font-size: 4rem;
-    margin:auto auto;
+    margin:1rem auto auto 3rem;
+    padding-left: 2rem;
+}
+.stats{
+    grid-row: span 2;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+
+    border-radius: 2rem;
+    flex-direction: row;
+    display: flex;
+    align-items: center;
+    background-color: rgb(51, 17, 84);
+        --mask:
+          radial-gradient(140.16px at 50% 180.00px,#000 99%,#0000 101%) calc(50% - 120px) 0/240px 100%,
+          radial-gradient(140.16px at 50% -130px,#0000 99%,#000 101%) 50% 60px/240px 100% repeat-x;
+        -webkit-mask: var(--mask);
+                mask: var(--mask);
+}
+.stats p{
+    font-size: 4rem;
+    margin:1rem auto auto 3rem;
+    padding: 0 2rem;
+}
+.stats h2{
+    font-size: 2.5rem;
+    margin-top: 5rem;
+    padding: 0 2rem;
+}
+
+.thisDate{
+    flex-direction: column;
+    display: flex;
 }
 /* transactions widget*/
 .transactions{
     grid-column: span 1;
-    grid-row: span 2;
+    grid-row: span 1;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -50,8 +93,19 @@
     font-size: 1.5rem;
 }
 
+.recurringTransactions{
+    grid-column: 2;
+    grid-row: span 1;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.recurringTransactions h2{
+    font-size: 1.5rem;
+}
 .list{
-    background-color: rgb(163, 163, 163);
+    background-color: rgba(0, 0, 0, 0.699);
     width: 100%;
     height: 100%;
     border-radius: 15px;
@@ -80,14 +134,15 @@
     margin: 0.35rem;
 }
 /* stats widget*/
-.stats{
+
+
+
+
+/* addmoney widget  */
+.addMoney{
     grid-row: span 1;
-    grid-column: span 2;
-
-}
-
-.stats h2{
-    font-size: 2.5rem;
+    grid-column: span 1;
+    height: 510px;
 }
 
 .button-transaction{
@@ -96,7 +151,7 @@
     right: 1%;
     width: 70px;
     height: 70px;
-    background-color: gray;
+    background-color: black;
     border-radius: 100%;
 
     display: flex;
