--- a/src/Features/Add-Transaction/Add-Transaction.css
+++ b/src/Features/Add-Transaction/Add-Transaction.css
@@ -1,48 +1,71 @@
-#tab{
-    position: absolute;
-    right: 1%;
-    bottom: 1%;
-    width: 500px;
-    height: 500px;
-    background-color: gray;
-    border: 2px solid black;
-    border-radius: 25px;
-    padding: 3rem;
-    display: none;
-    flex-direction: column;
-    transition: 1s ease-in;
-}
-
-form{
-    display: flex;
-    flex-direction: column;
-}
-.form{
-    display: flex;
-    flex-direction: column;
-}
-
-.close{
-    font-size: 2rem;
-    position: absolute;
-    top: 1%;
-    right: 5%;
-    cursor: pointer;
+html{
+    font-family: 'Source Sans Pro', serif;
 }
 
 .choices-list{
     display: flex;
     flex-direction: row;
-    list-style-type: none
-    ;
+    list-style-type: none;
+    justify-content: center;
+    align-items: center;    
+    padding: 0;
 }
 
 .choice{
-    margin: 0 2rem;
     font-weight: bold;
-
+    cursor: pointer;
+    font-size: 1.25rem; 
+    margin: .5rem 2rem;
+    color: rgba(255, 255, 255, 0.432)
 }
 
 .active{
-    color: rgba(0, 0, 0, 0.281);
+    color: whitesmoke;
+    transition: 350ms ease-out;
+}
+
+.formTransaction{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#form{
+    background-color: transparent;
+    border-bottom: 0;
+    border-bottom: 4px solid #eee; 
+    border-radius: 0.5rem;
+    padding: .35rem 0;
+    font-size: 1.15rem;
+    width: 80%;
+    text-align: center;
+}
+.label{
+    font-size: 1.35rem;
+    padding: 0.5rem;
+    
+}
+
+#form:focus, #form:valid{
+    outline: 0;
+    border-bottom-color: rgba(192, 137, 255, 0.781);
+    color: whitesmoke;
+    transition: 250ms ease;
+}
+
+.submit{
+    border-radius: 1.25rem;
+    background-color: rgba(195, 143, 255, 0.781);
+    letter-spacing: .05rem;
+    color: whitesmoke;
+    padding: 0.5rem 1rem;
+    font-size: 1.5rem;
+    margin: 2rem 0 0.5rem;
+    box-shadow: -1px 10px 15px -4px rgba(186, 67, 255, 0.055);
+    cursor: pointer;
+}
+
+.submit:active{
+    background-color: transparent;
+    border: 2px solid whitesmoke;
 }
