--- a/src/Features/Add-Transaction/Add-Transaction.css
+++ b/src/Features/Add-Transaction/Add-Transaction.css
@@ -14,7 +14,7 @@ html{
 .choice{
     font-weight: bold;
     cursor: pointer;
-    font-size: 1.25rem; 
+    font-size: 1.5rem; 
     margin: .5rem 2rem;
     color: rgba(255, 255, 255, 0.432)
 }
@@ -28,6 +28,7 @@ html{
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 #form{
@@ -36,12 +37,12 @@ html{
     border-bottom: 4px solid #eee; 
     border-radius: 0.5rem;
     padding: .35rem 0;
-    font-size: 1.15rem;
+    font-size: 1.25rem;
     width: 80%;
     text-align: center;
 }
 .label{
-    font-size: 1.35rem;
+    font-size: 1.5rem;
     padding: 0.5rem;
     
 }
@@ -59,7 +60,7 @@ html{
     letter-spacing: .05rem;
     color: whitesmoke;
     padding: 0.5rem 1rem;
-    font-size: 1.5rem;
+    font-size: 1.75rem;
     margin: 2rem 0 0.5rem;
     box-shadow: -1px 10px 15px -4px rgba(186, 67, 255, 0.055);
     cursor: pointer;
