--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -12,6 +12,7 @@ main{
     display: grid;
     height: auto;
     width: 1300px;
+    grid-template-columns: 1fr 1fr;
     gap: 2rem;
     margin-bottom: 100px;
 }
@@ -104,6 +105,7 @@ main{
 }
 .monthstats h2{
     font-size: 3rem;
+    
 }
 
 .thisDate{
@@ -142,7 +144,10 @@ main{
 }
 
 .transactions h2{
-    font-size: 1.5rem;
+    font-size: 3rem;
+    text-shadow: -1px -1px 0px rgba(0, 0, 0, 0.356),
+    3px 3px 0px rgba(9, 8, 10, 0.438),
+    6px 6px 0px rgba(197, 126, 255, 0.26);
 }
 
 .recurringTransactions{
@@ -155,10 +160,13 @@ main{
 }
 
 .recurringTransactions h2{
-    font-size: 1.5rem;
+    font-size: 3rem;
+    text-shadow: -1px -1px 0px rgba(0, 0, 0, 0.356),
+    3px 3px 0px rgba(9, 8, 10, 0.438),
+    6px 6px 0px rgba(197, 126, 255, 0.26);
 }
 .list{
-    background-color: rgba(0, 0, 0, 0.699);
+    background-color: #331154;
     width: 100%;
     height: 100%;
     border-radius: 15px;
@@ -199,6 +207,7 @@ main{
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 100px;
 }
 
 .item .transaction-title{
@@ -212,12 +221,22 @@ main{
 .item .transaction-ammount{
     align-self: flex-end;
     height: 100%;
-    font-size: 2rem;
+    font-size: 1.75rem;
     margin: -10px 0.35rem;
     padding: 0 1.25rem;
 }
 
-.arrowButton{
+.rightArrowButton{
+    display: none;
+    width: 0%;
+    font-size: 2.5rem;
+    background-color: rgb(100, 255, 100);
+    color: black;
+    border-bottom-left-radius: 2rem;
+    border-top-left-radius: 2rem;
+}
+
+.upArrowButton{
     display: none;
     width: 0%;
     font-size: 2.5rem;
@@ -235,18 +254,18 @@ main{
     color: black;
 }
 
-.expenses:hover .deleteButton, .expenses:hover .arrowButton{
+.expenses:hover .deleteButton, .expenses:hover .rightArrowButton{
     display: block;
     width: 15%;
     
 }
 .expenses:hover .button{
     display: block;
-    width: 20%;
+    width: 15%;
 }
 
 .expenses:hover .item {
-    width: 80%;
+    width: 85%;
 }
 
 
@@ -260,7 +279,195 @@ main{
     grid-row: span 1;
     grid-column: span 1;
     height: 580px;
-    width: 500px;
     justify-self: center;
 }
 
+@media (max-width:1123px) {
+    nav{
+        width: 100%;
+    }
+    main{
+        width: 100%;
+    }
+    .main{
+        width: 95%;
+        justify-items: center;
+        grid-template-columns: 1fr;
+    }
+    .balance{
+        grid-row: span 2;
+    }   
+    .monthstats{
+        grid-row: span 3;
+    }
+    .income{
+        height: 50px;
+    }
+    .balance-widget {
+        grid-row: span 1;
+        grid-column: span 1;
+        width: 100%;
+        height: 470px;
+    }
+    .balance h2{
+        padding-left: 1rem;
+        font-size: 2rem;
+    }
+    .balance p{
+        font-size: 4rem;
+    }
+    .thisDate h2{
+        font-size: 2rem;
+    }
+    .lastchild{
+        border-bottom: 0;
+    }
+    .income p{
+        font-size: 2rem;
+       
+    }
+    .arrows{
+        font-size: 2rem;
+    }
+    .transactions {
+        grid-column: 1;
+        grid-row: 2;
+        height: 400px;
+        width: 90%;
+    }
+    .transactions h2{
+        font-size: 2rem;
+        padding: 0;
+    }
+    .recurringTransactions{
+        grid-column: 1;
+        grid-row: 3;
+        height: 400px;
+        width: 90%;
+    }
+    .recurringTransactions h2{
+        font-size: 2rem;
+        padding: 0;
+    }
+    .addMoney{
+        display: none;
+    }
+    .expenses:hover .rightArrowButton{
+        display: none;
+        width: 0%;
+    }
+    .expenses:hover .deleteButton, .expenses:hover .upArrowButton{
+        display: block;
+        width: 10%;
+    }
+    .expenses:hover .button{
+        display: block;
+        width: 10%;
+    }
+    .expenses:hover .item {
+        width: 90%;
+    }
+}
+
+@media (max-width: 920px) {
+    .item{
+        height: 75px;
+    }
+    .item .transaction-title{
+        font-size: 1.25rem;
+        margin-bottom: 0.35rem;
+    }
+    .item .transaction-description{
+        font-style: italic;
+        font-size: 1rem;
+    }
+    .item .transaction-ammount{
+        align-self: flex-end;
+        height: 100%;
+        font-size: 1.5rem;
+        margin: -15px 0.35rem;
+        padding: 0 1rem;
+    }
+    .expenses:hover .deleteButton, .expenses:hover .upArrowButton{
+        display: block;
+        width: 12%;
+    }
+    .expenses:hover .button{
+        display: block;
+        width: 12%;
+    }
+    .expenses:hover .item {
+        width: 88%;
+    }    
+    .transactions h2{
+        font-size: 1.75rem;
+    }
+    .recurringTransactions h2{
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 700px) {
+    .expenses:hover .deleteButton, .expenses:hover .upArrowButton{
+        display: block;
+        width: 15%;
+    }
+    .expenses:hover .button{
+        display: block;
+        width: 15%;
+    }
+    .expenses:hover .item {
+        width: 85%;
+    }
+}
+@media (max-width: 580px) {
+    .allcurrencies{
+        flex-direction: column;
+    }
+    .income {
+        margin-top: 0rem;
+        height: 40px;
+        border-right: 0;
+        padding: 1rem;
+        border-bottom: 1px solid rgba(128, 128, 128, 0.349);
+    }
+    .balance{
+        grid-row: span 1;
+    }   
+    .monthstats{
+        grid-row: span 4;
+    }
+}
+
+@media (max-width:520px) {
+
+    .expenses:hover .deleteButton, .expenses:hover .upArrowButton{
+        display: block;
+        width: 20%;
+    }
+    .expenses:hover .button{
+        display: block;
+        width: 20%;
+    }
+    .expenses:hover .item {
+        width: 80%;
+    }
+}
+
+@media (max-width:380px) {
+
+    .expenses:hover .deleteButton, .expenses:hover .upArrowButton{
+        display: block;
+        width: 25%;
+    }
+    .expenses:hover .button{
+        display: block;
+        width: 25%;
+    }
+    .expenses:hover .item {
+        width: 75%;
+    }
+    .expenses:hover .item .dayTransaction{
+        display: none;
+    }
+}
