--- a/src/Components/LoginPage/LoginPage.css
+++ b/src/Components/LoginPage/LoginPage.css
@@ -3,5 +3,36 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100lvh;
+    height: 100vh;
+
+}
+
+.LoginPage h1{
+    font-size: 3rem;
+    text-shadow: -1px -1px 0px rgba(0, 0, 0, 0.356),
+    3px 3px 0px rgba(23, 23, 24, 0.171),
+    6px 6px 0px rgba(0, 0, 0, 0.123);
+    margin-bottom: 1rem;
+}
+.submit{
+    font-family: Arial, Helvetica, sans-serif;
+}
+.registerForm{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #331154;
+    border-radius: 2rem;
+    padding: 2rem;
+    width: 500px;
+    border: 3px solid rgb(245, 245, 245);
+    box-shadow: -1px -1px 0px rgba(0, 0, 0, 0.356),
+    3px 3px 0px rgba(23, 23, 24, 0.171),
+    6px 6px 0px rgba(0, 0, 0, 0.123);
+}
+
+.registerForm .form-name,
+.registerForm .form-balance{
+    font-size: 1.25rem;
+    padding: 1.5rem;
 }
