--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -5,6 +5,11 @@ body {
     padding: 0px;
     margin: 0px;
     min-height: 100vh;
+    width: 100%;
+  }
+
+  nav{
+    width: 100%;
   }
 
   #hamburger-input{
@@ -14,8 +19,8 @@ body {
   
   #hamburger-menu {
     margin: 25px;
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     display: block;
     background: linear-gradient(
       to bottom, 
@@ -35,21 +40,25 @@ body {
     display: flex;
     flex-direction: column;
     top: 0;
-    left: -250px;
-    width: 200px;
+    left: -300px;
+    width: 250px;
     height: 100%;
-    background-color: whitesmoke;
-    border-right:1px solid black;
+    background-color: #331154;
+    
+    border-right:3px solid whitesmoke;
     padding: 20px;
     transition: 0.3s;
+    z-index: 99999;
 }
+
+
 #hamburger-menu #sidebar-menu h3{
     font-size: 2rem;
     margin: 1rem auto;
 }
 #hamburger-menu #sidebar-menu a {
     text-decoration: none;
-    color: black;
+    color: whitesmoke;
     font-weight: bold;
     line-height: 40px;
     font-size: 1.25rem;
@@ -74,7 +83,16 @@ body {
     background-color: #7c7c7c33;
 }
 
-
+#hamburger-input:checked + #hamburger-menu{
+  background: linear-gradient(
+    to bottom, 
+    rgba(255, 255, 255, 0), rgba(255, 255, 255, 0) 20%, 
+    rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 0) 40%, 
+    rgba(255, 255, 255, 0) 40%, rgba(255, 255, 255, 0) 60%, 
+    rgba(255, 255, 255, 0) 60%, rgba(255, 255, 255, 0) 80%, 
+    rgba(255, 255, 255, 0) 80%, rgba(255, 255, 255, 0) 100%
+  );
+}
 #hamburger-input:checked + #hamburger-menu #sidebar-menu {
     visibility: visible;
     left: 0;
@@ -88,15 +106,25 @@ nav{
   display: flex;
   flex-direction: row;
   height: 10vh;
-  margin: 0;
+
+  margin: 0 0 0.5rem 0;
 }
 
 .title h1{
   font-size: 4rem;
-  padding: 0;
+  padding: 0.5rem;
   margin: 0;
-  margin-top: 10px;
 }
 .title{
   margin: 0 auto;
+}
+
+@media  (max-width: 700px){
+  .title h1{
+    font-size: 3rem;
+  }
+  #hamburger-menu {
+    width: 30px;
+    height: 30px;
+  }
 }
