--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -4,9 +4,11 @@
 }
 main{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: 'Source Sans Pro', serif;
+    overflow-x: hidden;
 }
 .main{
     display: grid;
@@ -37,7 +39,7 @@ main{
     padding: 0;
     grid-template-rows: repeat(5, 1fr);
     align-items: center;
-    
+    border: 1px solid whitesmoke;
 }
 .balance {
     grid-row: span 2;
@@ -275,13 +277,17 @@ main{
 
 
 /* addmoney widget  */
-.addMoney{
+#addTransaction{
     grid-row: span 1;
     grid-column: span 1;
     height: 580px;
     justify-self: center;
+    display: block;
 }
 
+#button-36 {
+    display: none;
+  }
 @media (max-width:1123px) {
     nav{
         width: 100%;
@@ -308,6 +314,7 @@ main{
         grid-column: span 1;
         width: 100%;
         height: 470px;
+        border: 1px solid whitesmoke;
     }
     .balance h2{
         padding-left: 1rem;
@@ -333,7 +340,7 @@ main{
         grid-column: 1;
         grid-row: 2;
         height: 400px;
-        width: 90%;
+        width: 88%;
     }
     .transactions h2{
         font-size: 2rem;
@@ -343,14 +350,23 @@ main{
         grid-column: 1;
         grid-row: 3;
         height: 400px;
-        width: 90%;
+        width: 88%;
     }
     .recurringTransactions h2{
         font-size: 2rem;
         padding: 0;
     }
-    .addMoney{
+    #addTransaction{
         display: none;
+        position: fixed;
+        width: 95%;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: #00000085;
+        backdrop-filter: brightness(60%);
+        -webkit-backdrop-filter: brightness(60%);
     }
     .expenses:hover .rightArrowButton{
         display: none;
@@ -367,8 +383,48 @@ main{
     .expenses:hover .item {
         width: 90%;
     }
+
+    #button-36 {
+    display: flex;
+    background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
+    border-radius: 100%;
+    border-style: none;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    flex-shrink: 0;
+    font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+    font-weight: 500;
+    height: 70px;
+    width: 70px;
+    text-align: center;
+    padding: 0;
+    text-align: center;
+    justify-content: center;
+    text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
+    transition: all .5s;
+    -webkit-user-select: none;
+    user-select: none;
+    touch-action: manipulation;
+    position: fixed;
+    right: 1%;
+    bottom: 1%;
+    font-size: 3rem;
+    z-index: 9999;
+    }
+
+    #button-36:hover {
+    box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
+    transition-duration: .5s;
 }
 
+
+}
+@media (min-width: 768px) {
+  .button-36 {
+    padding: 0 2.6rem;
+  }
+}
 @media (max-width: 920px) {
     .item{
         height: 75px;
