--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -52,9 +52,12 @@ body {
 }
 
 
+#hamburger-menu #sidebar-menu h2{
+    font-size: 2.25rem;
+    margin: 0 auto;
+}
 #hamburger-menu #sidebar-menu h3{
-    font-size: 2rem;
-    margin: 1rem auto;
+  margin: 0 auto 1rem auto;
 }
 #hamburger-menu #sidebar-menu a {
     text-decoration: none;
