--- a/src/Features/Add-Recurring/Add-Recurring.css
+++ b/src/Features/Add-Recurring/Add-Recurring.css
@@ -71,3 +71,15 @@ html{
     background-color: transparent;
     border: 2px solid whitesmoke;
 }
+
+@media (max-width:530px) {
+    .choice{
+        font-size: 1.35rem;
+    }
+    .label{
+        font-size: 1.35rem;
+    }
+    .submit{
+        font-size: 1.15rem;
+    }
+}
