--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,38 @@
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #C0C0C0 #EBEBEB;
+}
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+  width: 10px;
+  width: 10px;
+}
+*::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: #ebebeb00;
+}
+
+*::-webkit-scrollbar-track:hover {
+  background-color: #b8c0c200;
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: #b8c0c200;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #C0C0C0;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #a5a5a5;
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: #747474;
+}
 
 
 html{
